rsass/tests/spec/non_conformant/errors/extend/selector/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend/selector"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("selector")
}

mod missing;

mod optional;

mod simple;
